Fix alignment of bars in stats module

--- a/interfaces/default/css/stats.css
+++ b/interfaces/default/css/stats.css
@@ -37,6 +37,10 @@ table.networktable {
 	font-weight: bold;
 }
 
+.progress {
+	margin-bottom: 0px !important;
+}
+
 #statscmd {
 	margin-top:10px;
 }
